--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,23 +11,23 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.josethen.coinhood.MainActivity">
+    tools:context="com.josethen.coinhood.View.MainActivity">
 
 
     <com.robinhood.spark.SparkView
         android:id="@+id/sparkview"
         android:layout_width="match_parent"
         android:layout_height="250dp"
-        android:background="@color/colorPrimary"
+        android:background="@android:color/background_light"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:spark_animateChanges="true"
-        app:spark_lineColor="@color/colorAccent"
+        app:spark_lineColor="@color/colorPrimary"
         app:spark_scrubEnabled="true" />
 
     <TextView
-        android:id="@+id/scrub_info_textview"
+        android:id="@+id/wifi_info_textview"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginEnd="8dp"
@@ -35,7 +35,7 @@
         android:layout_marginTop="24dp"
         android:layout_weight="1"
         android:gravity="center"
-        android:text="@string/scrub_empty"
+        android:text="@string/checking_connection"
         android:textAppearance="?android:textAppearanceLarge"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -71,7 +71,7 @@
         app:layout_constraintBottom_toTopOf="@+id/random_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/scrub_info_textview" />
+        app:layout_constraintTop_toBottomOf="@+id/wifi_info_textview" />
 
 
     <!--<Button-->
