--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,5 @@
     <color name="xrpBlack">#333333</color>
     <color name="xrpBlue">#27a2db</color>
     <color name="xrpGray">#777777</color>
-    <color name="white">#FFFFFF</color>
+    <color name="white">#ffffff</color>
 </resources>
